Changes from jTDS 1.2.4
=======================

11/05/2009 - Holger Rehn
 o Corrected bug [2892493], NullPointException when receiving character NULL
   values (SQL server 7.0 and later).

11/04/2009 - Holger Rehn 
 o Corrected bug [2891775], fix for [2340241] has broken Java 1.3 compatibility.

10/22/2009 - Holger Rehn
 o Corrected bug [2883066], Numeric overflow in conversion BigInteger/BIGINT.

10/17/2009 - Holger Rehn
 o Corrected bug [2871274], no soft kill for TimerThread.
 o Improved performance by not using Exceptions for controlling the timer,
   anymore.
 o Corrected a bug that lead to login errors being masked by later exceptions.

===============================================================================
09/29/2009 - jTDS 1.2.4 released
===============================================================================

Changes from jTDS 1.2.3
=======================

09/28/2009 - Holger Rehn
 o Corrected bug [2860742], getByte() causes overflow error for negative
   values.

09/27/2009 - Holger Rehn
 o Workaround for bug [2856350], JDBC4 method stubs make jTDS unusable.

===============================================================================
09/04/2009 - jTDS 1.2.3 released
===============================================================================

Changes from jTDS 1.2.2
=======================

08/21/2009 - Holger Rehn
 o Corrected bug [2814376], varchar-type is truncated in non-unicode
   environment.

08/20/2009 - Holger Rehn
 o Corrected bug [2349058], DateTime allows invalid dates through

08/14/2009 - Holger Rehn
 o Corrected bug [2181003], attempt to set a BC date invalidates
   driver state.

08/11/2009 - Holger Rehn
 o Corrected bug by packporting patch [2675463], getSchemas() now returns
   schemas, not database users for MSSQL 2005 and later.

08/10/2009 - Holger Rehn
 o Corrected bug [1855125], jTDS silently ignores integer overflows in
   ResultSet's getter methods.

08/08/2009 - Holger Rehn